# raspberry-team_2_fire_drone_alert

./: CMakeLists.txt  README.md  email_queue.db  fire-detector.py  main.cpp  telegramBot.py
